2005-12-30  Florian Boor  <florian@kernelconcepts.de>

    gpe-what.c: Reorder and rename, add sanity check. Fix warnings.
                Improve help dialog position.
    gpe-what.c: Implement proper position calculation.
    
2005-12-29  Florian Boor  <florian@kernelconcepts.de>

    gpe-what.c: Add some hacks to improve infoprint popup position.
    Add autotools support files: Makefile.am, autogen.sh, configure.ac,
                                 gpe-dist.am, gpe-tp.am, gpe-what.desktop.in.in,
                                 po/POTFILES.in
    Remove obsolete files: gpe-what.desktop.in.in, mbtray.c, mbtray.h, Makefile


2005-12-29  Florian Boor  <florian@kernelconcepts.de>

	gpe-what.c: Global filter workaround to make infoprints work on ARM.
	            Still open: Position setup corrections, proper solution for 
				            infoprints.

2005-12-28  Florian Boor  <florian@kernelconcepts.de>

    gpe-what.c: Improve popup window look and behaviour.
                Add icon to popups, improve popup type selection.
                Remove debug code and unused headers.
    Makefile: Add freetype includes/libraries.

2005-12-27  Florian Boor  <florian@kernelconcepts.de>

    gpe-what.c: First part of GTK based implementation. Replace Xlib and libmb
                bits by GTK/GDK.
                Still missing: Help display, popup sizing and replacement of
                               some Xlib calls.
                               
    Makefile: New version, change members.