@@ -1,5 +1,9 @@
 2005-12-30  Florian Boor  <florian@kernelconcepts.de>
 
+	gpe-what.c: Change popup colour, add some comments. Remove old popup before
+	            displaying a new one.
+				Shorter timeouts.
+
     gpe-what.c: Reorder and rename, add sanity check. Fix warnings.
                 Improve help dialog position.
     gpe-what.c: Implement proper position calculation.
